--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-redux-starter",
+  "name": "pipes-starter",
   "description": "Gatsby's redux starter - Based in Gatsby's default starter",
   "version": "1.0.0",
-  "author": "Alex Vivero",
+  "author": "Ana Mo",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.2.2",
+    "gatsby-remark-images": "^3.1.7",
     "gatsby-source-filesystem": "^2.1.1",
     "gatsby-transformer-remark": "^2.5.0",
     "gatsby-transformer-sharp": "^2.2.1",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-icons": "^2.2.7",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
@@ -51,6 +53,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AVivero/gatsby-redux-starter"
+    "url": "https://github.com/anmud/gatsby-starter.git"
   }
 }
